--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -134,10 +134,6 @@ body {
     @media ($desktop) {
         flex-direction: row;
         flex-wrap: nowrap;
-        background-image: url('https://picsum.photos/1280/720.webp');
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: center;
     }
 }
 
@@ -174,16 +170,7 @@ aside {
         order: 1;
         text-align: center;
         background: transparent;
-
-        &::after {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            background-color: rgba(darken($paleblue, 25%), 0.56);
-        }
+        backdrop-filter: brightness(0.792);
     }
 
     p {
@@ -490,23 +477,6 @@ h3 {
 
     @media ($desktop) {
         padding-bottom: 5rem;
-
-        &::before,
-        &::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            top: 0;
-            display: block;
-            pointer-events: none;
-        }
-
-        &::after {
-            background-color: #f2f2f2;
-            background-color: rgba(darken($paleblue, 25%), 0.33);
-        }
     }
 
     * {
@@ -1431,7 +1401,7 @@ code {
     position: relative;
     padding: 1.5rem 1.5rem 3rem;
     margin-bottom: -1rem;
-    background-color: rgba(darken($paleblue, 25%), 0.84);
+    backdrop-filter: brightness(0.656);
 
     h2,
     button {
