--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -139,7 +139,6 @@ body {
 
 main {
     flex-grow: 1;
-    order: 2;
     max-width: 100%;
     position: relative;
     background: white;
@@ -160,16 +159,14 @@ main {
 
 aside {
     padding: 0.5rem 1.5rem;
+    padding-bottom: 3.25rem;
     position: relative;
-    background: darken($paleblue, 20%);
 
     @media ($desktop) {
         padding: 0 2rem;
         flex-basis: $sidebarWidth - 2rem;
         flex-shrink: 0;
-        order: 1;
         text-align: center;
-        background: transparent;
         backdrop-filter: brightness(0.792);
     }
 
@@ -352,7 +349,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.48rem;
+    font-size: 1.6rem;
     text-transform: uppercase;
     margin: 0 0 1rem;
     color: $paleblue;
@@ -360,7 +357,7 @@ h3 {
     font-family: 'BenchNine', sans-serif;
 
     @media ($desktop) {
-        font-size: 1.7rem;
+        font-size: 1.78rem;
     }
 }
 
@@ -559,7 +556,6 @@ h1,
         width: 20rem;
         height: auto;
         display: block;
-        margin-top: -0.5rem;
     }
 
     @media ($tablet) {
@@ -582,28 +578,6 @@ main {
         > .mid {
             padding: 0 !important;
         }
-    }
-}
-
-.image-credit {
-    @media ($max-tablet) {
-        display: none;
-    }
-
-    position: absolute;
-    right: 2rem;
-    bottom: 1rem;
-    text-decoration: none;
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    opacity: 0.2;
-    font-weight: 600;
-    user-select: none;
-
-    &:hover {
-        opacity: 0.4;
-        // text-decoration: underline;
     }
 }
 
@@ -767,22 +741,20 @@ article {
 }
 
 .fbx-wrap {
-    position: sticky;
-    top: 0;
     margin-left: -1.5rem;
     width: 100vw;
-    border-bottom: 1px solid $bordercolor;
     backface-visibility: hidden;
     z-index: 30;
+    position: absolute;
+    top: -3rem;
 
     main.type-post & {
         margin: 0;
     }
 
     @media ($desktop) {
-        position: absolute;
-        right: 0;
-        left: 0;
+        inset: 0;
+        bottom: auto;
         margin: 0;
         width: 100%;
         border: none;
@@ -816,16 +788,15 @@ article {
         height: 3rem;
         padding: 0 0 0 3.75rem;
         z-index: 10;
-        background: darken($paleblue, 10%);
         color: white;
-        margin-bottom: -1px;
+        background: transparent;
 
         @media ($desktop) {
-            background: transparent;
             line-height: 4rem;
             height: 4rem;
             padding-left: 6rem;
             margin: 0;
+            top: 0;
         }
 
         @include placeholder {
@@ -848,7 +819,7 @@ article {
                 overflow: auto;
 
                 &::before {
-                    background: rgba(darken($paleblue, 20%), 0.84);
+                    background: rgba(0, 0, 0, 0.71);
                     transform: scaleY(1);
                 }
             }
@@ -872,7 +843,7 @@ article {
 
             ~ .post-list {
                 &::before {
-                    background: rgba(darken($paleblue, 20%), 0.94);
+                    background: rgba(0, 0, 0, 0.71);
                 }
             }
         }
@@ -1401,7 +1372,7 @@ code {
     position: relative;
     padding: 1.5rem 1.5rem 3rem;
     margin-bottom: -1rem;
-    backdrop-filter: brightness(0.656);
+    backdrop-filter: brightness(0.586);
 
     h2,
     button {
