feat: new bg colors, add noise, layout/color adjustments

--- a/includes/layouts/@default.njk
+++ b/includes/layouts/@default.njk
@@ -30,7 +30,7 @@
         <link rel="canonical" href="{{ page.url | httpUrl }}">
     </head>
     <body>
-        <style>.main-content { background: {{ page.url | colorByString }}; }</style>
+        <style>.main-content { background-color: {{ page.url | colorByString }}; }</style>
         <div class="main-content">
             <aside>
                 {% include "aside.njk" %}
