chore: minor css updates, replace woff with woff2

--- a/includes/article.njk
+++ b/includes/article.njk
@@ -23,11 +23,11 @@
         {% endif %}
 
         <div>
-            {{ p.data.excerpt | md | safe }}
+            <div>
+                {{ p.data.excerpt | md | safe }}
+            </div>
+
+            <a href="{{ url }}" class="button readmore">Read more</a>
         </div>
     </div>
-
-    <p>
-        <a href="{{ url }}" class="button readmore">Read more</a>
-    </p>
 </article>
