--- a/src/scss/includes/fonts/benchnine.scss
+++ b/src/scss/includes/fonts/benchnine.scss
@@ -3,5 +3,5 @@
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src: url('/assets/fonts/benchnine/benchnine-700.woff') format('woff');
+  src: url('/assets/fonts/benchnine/benchnine-700.woff2') format('woff2');
 }
